--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -1,57 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="@dimen/small_padding">
 
     <ImageView
         android:id="@+id/car_img"
-        android:layout_width="120dp"
-        android:layout_height="125dp"
-        android:elevation="30dp"
-        android:src="@drawable/car"
-        />
+        android:layout_width="90dp"
+        android:layout_height="140dp"
+        android:elevation="@dimen/large_elevation"
+        android:scaleType="fitCenter"
+        android:src="@drawable/car" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="140dp"
+        android:layout_marginStart="-60dp"
+        android:layout_marginEnd="@dimen/very_small_margin"
         android:backgroundTint="@color/secondary"
-        android:layout_marginStart="-45dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="20dp"
+        app:cardCornerRadius="@dimen/small_radius"
+        app:cardElevation="@dimen/medium_elevation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/car_name"
+                style="@style/APPTextSemiBold.Title.Title1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Car Name"
-                android:textColor="@color/white"
-                android:textSize="23sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.253"
+                app:layout_constraintHorizontal_bias="0.3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.15" />
 
             <ImageView
                 android:id="@+id/share"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="12dp"
+                android:layout_width="@dimen/medium_icon_size"
+                android:layout_height="@dimen/medium_icon_size"
+                android:layout_marginTop="@dimen/small_margin"
                 android:src="@drawable/share"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,24 +57,19 @@
 
             <ImageView
                 android:id="@+id/vendor_img"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-
+                android:layout_width="@dimen/medium_icon_size"
+                android:layout_height="@dimen/medium_icon_size"
+                android:layout_marginTop="@dimen/small_margin"
                 android:src="@drawable/man"
-                android:layout_marginTop="12dp"
                 app:layout_constraintStart_toStartOf="@id/car_name"
                 app:layout_constraintTop_toBottomOf="@id/car_name" />
 
             <TextView
                 android:id="@+id/vendor_name"
+                style="@style/APPTextSemiBold.Title.Title2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:text="Falah Hassan"
-                android:layout_marginStart="4dp"
-
-                android:textColor="@color/subtext"
-                android:textSize="12sp"
+                android:layout_marginStart="@dimen/very_small_margin"
                 app:layout_constraintBottom_toBottomOf="@id/vendor_img"
                 app:layout_constraintStart_toEndOf="@id/vendor_img"
                 app:layout_constraintTop_toTopOf="@id/vendor_img" />
@@ -87,84 +77,65 @@
             <View
                 android:layout_width="40dp"
                 android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-
-                android:background="#03A9F4"
+                android:layout_marginTop="@dimen/very_small_margin"
+                android:background="@color/blue"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="@id/vendor_name"
                 app:layout_constraintTop_toBottomOf="@id/vendor_name" />
-       <LinearLayout
-           android:id="@+id/speed_row"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="20dp"
-           app:layout_constraintStart_toStartOf="@id/vendor_img"
-           app:layout_constraintTop_toBottomOf="@id/vendor_img"
-           >
-           <ImageView
-               android:id="@+id/speed"
-               android:layout_width="12dp"
-               android:layout_height="12dp"
-               android:src="@drawable/speed"
-             />
-           <TextView
-               android:id="@+id/speed_value"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="20 km/h"
-               android:layout_marginStart="4dp"
-               android:textColor="@color/subtext"
-               android:textSize="10sp"
-               />
-       </LinearLayout>
-            <LinearLayout
-                android:id="@+id/location_row"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/speed_row"
-                app:layout_constraintTop_toTopOf="@id/speed_row"
-                >
-                <ImageView
-                    android:id="@+id/location"
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:src="@drawable/location"
-                    android:layout_marginStart="20dp"
-                    />
-                <TextView
-                    android:id="@+id/location_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Iraq,Mosul"
-                    android:layout_marginStart="4dp"
-                    android:textColor="@color/subtext"
-                    android:textSize="10sp"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/location_row"
-                app:layout_constraintTop_toTopOf="@id/location_row"
-                >
-                <ImageView
-                    android:id="@+id/price"
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:src="@drawable/price"
-                    android:layout_marginStart="20dp"
-                    />
-                <TextView
-                    android:id="@+id/price_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2000$"
-                    android:layout_marginStart="4dp"
-                    android:textColor="@color/subtext"
-                    android:textSize="10sp"
-                    />
-            </LinearLayout>
 
+            <ImageView
+                android:id="@+id/speed"
+                android:layout_width="@dimen/small_icon_size"
+                android:layout_height="@dimen/small_icon_size"
+                android:layout_marginTop="@dimen/medium_margin"
+                android:src="@drawable/speed"
+                app:layout_constraintStart_toStartOf="@id/vendor_img"
+                app:layout_constraintTop_toBottomOf="@id/vendor_img" />
+
+            <TextView
+                android:id="@+id/speed_value"
+                style="@style/APPTextRegular.Subtitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/very_small_margin"
+                app:layout_constraintStart_toEndOf="@id/speed"
+                app:layout_constraintTop_toTopOf="@id/speed" />
+
+            <ImageView
+                android:id="@+id/location"
+                android:layout_width="@dimen/small_icon_size"
+                android:layout_height="@dimen/small_icon_size"
+                android:layout_marginStart="@dimen/small_margin"
+                android:src="@drawable/location"
+                app:layout_constraintBottom_toBottomOf="@id/speed"
+                app:layout_constraintStart_toEndOf="@id/speed_value" />
+
+            <TextView
+                android:id="@+id/location_value"
+                style="@style/APPTextRegular.Subtitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/very_small_margin"
+                app:layout_constraintBottom_toBottomOf="@id/speed_value"
+                app:layout_constraintStart_toEndOf="@id/location" />
+
+            <ImageView
+                android:id="@+id/price"
+                android:layout_width="@dimen/small_icon_size"
+                android:layout_height="@dimen/small_icon_size"
+                android:layout_marginStart="@dimen/small_margin"
+                android:src="@drawable/price"
+                app:layout_constraintBottom_toBottomOf="@id/location"
+                app:layout_constraintStart_toEndOf="@id/location_value" />
+
+            <TextView
+                android:id="@+id/price_value"
+                style="@style/APPTextRegular.Subtitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/very_small_margin"
+                app:layout_constraintBottom_toBottomOf="@id/location_value"
+                app:layout_constraintStart_toEndOf="@id/price" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
