--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primary">#333366</color>
     <color name="secondary">#5C5493</color>
     <color name="subtext">#DDDBDB</color>
+    <color name="blue">#03A9F4</color>
 </resources>
