--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -10,7 +10,7 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/small_radius" />
-            <solid android:color="@color/primary" />
+            <gradient android:angle="100" android:endColor="@color/primary" android:startColor="@color/secondary" android:type="linear" />
         </shape>
     </item>
 
