--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,53 @@
             android:gravity="center"
             android:text="@string/app_name" />
     </LinearLayout>
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/error_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:constraint_referenced_ids="error,error_text,try_again_button"
+        />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/no_internet" />
+
+    <TextView
+        android:id="@+id/error_text"
+        style="@style/APPTextRegular.Subtitle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/error_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.75"
+         />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/try_again_button"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginHorizontal="@dimen/medium_margin"
+        android:elevation="@dimen/large_elevation"
+        android:layout_marginTop="@dimen/medium_margin"
+        android:background="@drawable/button"
+        android:gravity="center"
+        android:text="Try Again"
+        style="@style/APPTextSemiBold.Title.Title1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/error_text"
+        />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loading"
@@ -49,4 +96,6 @@
         app:layout_constraintTop_toBottomOf="@id/app_bar"
         tools:listitem="@layout/car_item"
         />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
