--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/primary"
     android:orientation="vertical"
-    tools:context=".presentation.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/success"
@@ -36,7 +36,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/back_to_home"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/button_height"
         android:layout_marginHorizontal="@dimen/medium_margin"
         android:elevation="@dimen/large_elevation"
         android:layout_marginTop="@dimen/large_margin"
