--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="large_text_size">25sp</dimen>
-    <dimen name="medium_text_size">14sp</dimen>
+    <!--            TextSize             -->
     <dimen name="small_text_size">12sp</dimen>
-    <dimen name="small_icon_size">12dp</dimen>
-    <dimen name="small_padding">10dp</dimen>
-    <dimen name="large_elevation">30dp</dimen>
-    <dimen name="medium_elevation">20dp</dimen>
-    <dimen name="small_radius">5dp</dimen>
-    <dimen name="medium_icon_size">20dp</dimen>
-    <dimen name="small_margin">12dp</dimen>
-    <dimen name="very_small_margin">4dp</dimen>
-    <dimen name="medium_margin">20dp</dimen>
-    <dimen name="app_bar_height">60dp</dimen>
+    <dimen name="medium_text_size">14sp</dimen>
+    <dimen name="large_text_size">25sp</dimen>
+
+    <!--            Elevation             -->
     <dimen name="very_small_elevation">2dp</dimen>
+    <dimen name="medium_elevation">20dp</dimen>
+    <dimen name="large_elevation">30dp</dimen>
+
+    <!--            IconSize             -->
+    <dimen name="small_icon_size">12dp</dimen>
+    <dimen name="medium_icon_size">20dp</dimen>
+    <dimen name="icon_detail_size">16dp</dimen>
+
+
+    <!--            Radius             -->
+    <dimen name="small_radius">5dp</dimen>
+    <dimen name="medium_radius">16dp</dimen>
+
+
+    <!--            Padding             -->
+    <dimen name="small_padding">10dp</dimen>
+
+    <!--            Margin              -->
+    <dimen name="very_small_margin">4dp</dimen>
+    <dimen name="small_margin">12dp</dimen>
+    <dimen name="medium_margin">20dp</dimen>
     <dimen name="large_margin">40dp</dimen>
+
+
+    <!--          Height and Width       -->
+    <dimen name="app_bar_height">60dp</dimen>
+    <dimen name="car_image_width">90dp</dimen>
+    <dimen name="car_image_height">140dp</dimen>
+    <dimen name="home_card_height">140dp</dimen>
+    <dimen name="line_width">40dp</dimen>
+    <dimen name="button_height">60dp</dimen>
+    <dimen name="car_image_detail_width">240dp</dimen>
+    <dimen name="car_image_detail_height">240dp</dimen>
+    <dimen name="card_detail_height">160dp</dimen>
+    <dimen name="vendor_image_size">100dp</dimen>
+
+
 </resources>
